--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -9,8 +9,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Nagul Calculator" />
-    <meta name="author" content="Nagul Meera" />
+    <meta name="description" content="Tahirs Calculator" />
+    <meta name="author" content="Tahir" />
     <meta
       name="Keywords"
       content="
