--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Tahirs Calculator" />
+    <meta name="description" content="Tahir's Calculator" />
     <meta name="author" content="Tahir" />
     <meta
       name="Keywords"
